<resources>
    <string name="app_name">cDiving</string>
    <string name="app_web">service@cdiving.com</string>
    <string name="permission_need">cDiving 需要%1$s权限，是否去设置？</string>
    <string name="permission_audio">录制音频</string>
    <string name="permission_camera">拍摄照片</string>
    <string name="permission_storage">存储</string>
    <string name="permission_phone">电话</string>
    <string name="permission_location">定位</string>
    <string name="ok">确定</string>
    <string name="login">登录</string>
    <string name="account_email"><font size="14">电子邮箱&#160;&#160;或&#160;&#160;用户名</font></string>
    <string name="register_hint">没有账号？去注册</string>
    <string name="connect_us">联系我们</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="login_account_hint"><font size="14">请输入用户名或电子邮箱</font></string>
    <string name="login_password_hint"><font size="14">请输入密码</font></string>
    <string name="login_code_hint"><font size="14">请输入验证码</font></string>
    <string name="email">电子邮箱</string>
    <string name="account">用户名</string>
    <string name="login_hint">已有账号？去登陆</string>
    <string name="company">我是公司&#160;&#160;或&#160;&#160;服务商</string>
    <string name="email_hint"><font size="14">您输入的电子邮箱格式不正确</font></string>
    <string name="account_hint"><font size="14">请输入用户名</font></string>
    <string name="register_password_hint"><font size="14">密码6~15字符</font></string>
    <string name="get_code_count">已发送(%1$s)</string>
    <string name="code_hint">请输入验证码</string>
    <string name="code_success_hint">获取验证码成功</string>
    <string name="please_wait">请稍后&#8230;</string>
    <string name="login_status_invalid">登录状态已失效</string>
    <string name="chats">对话</string>
    <string name="contact">联系人</string>
    <string name="datum">资料</string>
    <string name="back">返回</string>
    <string-array name="array_tab">
        <item>会话</item>
        <item>联系人</item>
    </string-array>
    <string-array name="login_tab">
        <item>登录</item>
        <item>联系我们</item>
        <item>取消</item>
    </string-array>
    <string name="contact_title">对方暂时未在线，您可以通过以下其他方式联系：</string>
    <string name="call">打电话</string>
    <string name="call_hint">请输入电话号码</string>
    <string-array name="contact_tab">
        <item>打电话</item>
        <item>电子邮箱</item>
        <item>取消</item>
    </string-array>
    <string name="splash_describe">Almost all commercial diving companies can be found here</string>
    <string name="splash_copy_right">JiaEnTech © 2018 All Rights Reserved</string>
    <string name="main_name">融云</string>
    <string name="main_conversation">会话</string>
    <string name="main_group">广场</string>
    <string name="main_chatroom">通讯录</string>
    <string name="main_customer">意见反馈</string>
    <string name="main_customer_xn">小能客服</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="add_select_group">创建群组</string>
    <string name="set_personal_information">我的账号</string>
    <string name="set_news_reminded">新消息提醒</string>
    <string name="set_privacy">隐私</string>
    <string name="set_set">设置</string>
    <string name="set_rongcloud">关于 SealTalk</string>
    <string name="set_logout">注销</string>
    <string name="de_save">"保存"</string>
    <string name="no_read_message">"···"</string>
    <string name="login_success">"登录成功"</string>
    <string name="new_message_notice">开启消息免打扰</string>
    <string name="new_message_show">新消息通知</string>
    <string name="new_message_voice">声音</string>
    <string name="new_message_vibration">震动</string>
    <string name="new_message_prompt_voice">新消息提示音</string>
    <string name="new_message_follow_system">跟随系统</string>
    <string name="friend_confirmation">加我好友时需要验证</string>
    <string name="the_blacklist">黑名单</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="blacklist_empty">黑名单为空</string>
    <string name="portrait">头像</string>
    <string name="my_username">昵称</string>
    <string name="update_log">更新日志</string>
    <string name="function_introduce">功能介绍</string>
    <string name="version_number">V2.1.0</string>
    <string name="dv_document">开发者文档</string>
    <string name="rongcloud_web">官方网站</string>
    <string name="new_version_update">当前版本</string>
    <string name="de_notification_start">开始时间</string>
    <string name="de_notification_end">结束时间</string>
    <string name="de_item_delete_friend">"删除"</string>
    <string name="de_actionbar_myacc">"个人账号"</string>
    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="de_actionbar_system">"系统消息"</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="de_notification_information">开启后，在设定时间段内收到新消息时不会响铃或振动。</string>
    <string name="de_group_list_default_discussion_name">讨论组</string>
    <string name="de_message_content_draft">[草稿]</string>
    <string name="de_message_at_me">[有人@我]</string>
    <string name="start_chat">发起会话</string>
    <string name="network_not_available">网络不可用</string>
    <string name="login_api_fail">登录请求接口失败</string>
    <string name="sync_userinfo_api_fail">同步用户信息接口请求失败</string>
    <string name="get_token_api_fail">获取token请求接口失败</string>
    <string name="sync_group_api_fail">同步群组信息请求接口失败</string>
    <string name="phone_or_psw_error">手机或者密码错误</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="Illegal_phone_number">非法手机号</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="phone_number_available">手机号可用</string>
    <string name="phone_number_has_been_registered">手机号已被注册</string>
    <string name="messge_send">短信已发出,请注意查收</string>
    <string name="message_frequency">短信发送频率超限</string>
    <string name="captcha_overdue">验证码过期,请重新请求</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="register_success">注册成功</string>
    <string name="forgot_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="Login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="code">短信验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="forget_password">忘记密码</string>
    <string name="cancel">取消</string>
    <string name="Done">完成</string>
    <string name="exit_app">确定退出应用?</string>
    <string name="No_friends">暂无好友</string>
    <string name="Search">搜索</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="chatroom">聊天室</string>
    <string name="groups">群聊</string>
    <string name="chatroom1">聊天室 I</string>
    <string name="add_success">加入成功</string>
    <string name="not_group_members">非群组成员不能查看群组详情</string>
    <string name="check_network">请检查网络</string>
    <string name="chatroom2">聊天室 II</string>
    <string name="chatroom3">聊天室 III</string>
    <string name="chatroom4">聊天室 IV</string>
    <string name="agreed_friend">已同意好友关系</string>
    <string name="agree">接&#160;&#160;&#160;受</string>
    <string name="request">已请求</string>
    <string name="ignore">已忽略</string>
    <string name="added">已添加</string>
    <string name="deleted">已删除</string>
    <string name="mobile_phone">手机号</string>
    <string name="change_password">密码修改</string>
    <string name="select_group_member">选择群组成员</string>
    <string name="remove_group_member">移除群组成员</string>
    <string name="add_group_member">添加群组成员</string>
    <string name="edit_group_name">填写群名称(2-10字)</string>
    <string name="create_group">创建群组</string>
    <string name="created_group">创建了群组</string>
    <string name="you">你</string>
    <string name="request_friends">请求添加你为好友</string>
    <string name="edit_phone">请输入 11 位手机号</string>
    <string name="original_password">原密码不能为空</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="confirm_password_not_null">确认密码不能为空</string>
    <string name="original_password_mistake">原密码填写错误</string>
    <string name="passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="original_password_text">初始密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="group_info">群组信息</string>
    <string name="group_member_size">全部群成员</string>
    <string name="group_name">群名称</string>
    <string name="confirm_quit_group">确认退出群组?</string>
    <string name="confirm_dismiss_group">确认解散群组?</string>
    <string name="clean_history">是否清除会话聊天记录?</string>
    <string name="set_top">会话置顶</string>
    <string name="message_notice">消息免打扰</string>
    <string name="search_message">查找聊天记录</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="send_message">发起聊天</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="user_details">用户详情</string>
    <string name="black_state">黑名单状态</string>
    <string name="divided_string">、</string>
    <string name="change_group_name">修改群名称为</string>
    <string name="quit_groups">退出了群组</string>
    <string name="dismiss_groups">解散了群组</string>
    <string name="join_group">加入了群组</string>
    <string name="to_join_group">加入了群组</string>
    <string name="invitation">邀请</string>
    <string name="remove_group_before_str">将</string>
    <string name="remove_group_after_str">移出了群组</string>
    <string name="my_groups">群组</string>
    <string name="code_is_null">验证码为空</string>
    <string name="name_is_null">昵称不能为空</string>
    <string name="name_contain_spaces">昵称不能包含空格</string>
    <string name="remove_group_members">确认移除以下群成员?</string>
    <string name="add_successful">添加成功</string>
    <string name="remove_successful">移除成功</string>
    <string name="least_one_friend">至少选择一位好友</string>
    <string name="not_send_code">未向服务端获取验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_failure">清除失败</string>
    <string name="change_group_info">更改群组信息</string>
    <string name="new_group_name">新的群名称</string>
    <string name="update_success">更改成功</string>
    <string name="quit_success">退出成功</string>
    <string name="dismiss_success">解散成功</string>
    <string name="group_name_not_is_null">群组昵称不能为空</string>
    <string name="group_name_size_is_one">群名称不少于2个字</string>
    <string name="create_group_success">群组创建成功</string>
    <string name="group_header_api_fail">群组头像接口请求失败</string>
    <string name="group_create_api_fail">群组创建接口请求失败</string>
    <string name="upload_portrait_failed">上传头像失败</string>
    <string name="phone_unregister">此号码未被注册</string>
    <string name="group_portrait">群头像</string>
    <string name="add_friend">加为好友</string>
    <string name="add_text">加好友信息...</string>
    <string name="request_success">请求成功</string>
    <string name="can_not_add_yourself">自己不能添加自己为好友</string>
    <string name="new_name">新昵称</string>
    <string name="portrait_update_success">头像更新成功</string>
    <string name="chat">会话</string>
    <string name="contacts">通讯录</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="mine_about">关于 SealTalk</string>
    <string name="my_wallet">我的钱包</string>
    <string name="mine_service">意见反馈</string>
</resources>