<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cdiving.cdiving.MainActivity">
    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tab" />

        <Button
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chat" />
    </LinearLayout>

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_below="@id/lin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.yinglan.scrolllayout.ScrollLayout
        android:id="@+id/scroll_down_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.yinglan.scrolllayout.content.ContentListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

            <LinearLayout
                android:id="@+id/linFoot"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/shape_rectangle_white_radius5"
                    >
                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:background="@mipmap/ic_chat"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chats"
                        />
                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:background="@mipmap/ic_contacts"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        />

                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@mipmap/ic_collection_normal"
                    />
            </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </com.yinglan.scrolllayout.ScrollLayout>
</RelativeLayout>
